--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -27,5 +27,6 @@ jobs:
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_MUSEMOOD }}'
           channelId: live
           projectId: musemood
+          entrypoint: "./client"
         env:
           FIREBASE_CLI_PREVIEWS: hostingchannels
